--- a/tox.ini
+++ b/tox.ini
@@ -3,17 +3,13 @@ max-line-length = 160
 
 [tox]
 envlist =
-    django21-py{38,37,36}
-    django22-py{38,37,36}
-    django30-py{38,37,36}
+    django{21,22,30}-py{38,37,36}
 
 [testenv]
 platform = linux
-
 deps =
-    dj21: Django~=2.1.*
-    dj22: Django~=2.2.*
-    dj30: Django~=3.0.*
-
+    django21: Django>=2.1.0,<2.2
+    django22: Django>=2.2.0,<3.0
+    django30: Django>=3.0.0
 commands =
     {toxinidir}/myexample/manage.py test
