--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Python package test
+name: Python package
 
 on:
   push:
@@ -26,7 +26,7 @@ jobs:
         pip install flake8 tox
 
     - name: check with flake8
-      run: flake8 ./staticfiles_processor
+      run: flake8 ./cache_helpers
 
     - name: Test with tox
       run: tox
